--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/no-empty-interface": "off",
     "prettier/prettier": [
       "error",
       {
