--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.9",
     "@chakra-ui/react": "^2.3.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -13,11 +14,15 @@
     "@types/node": "^12.20.55",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "chakra-react-select": "^4.2.1",
     "framer-motion": "^6.5.1",
+    "node-html-parser": "^5.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
+    "react-textarea-autosize": "^8.3.4",
+    "slugify": "^1.6.5",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
