--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "http://ritlew.github.io/gw2-fisher",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -53,6 +56,7 @@
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.4"
+    "eslint-plugin-react": "^7.31.4",
+    "gh-pages": "^4.0.0"
   }
 }
